Support Java 25 by migrating to the finalized FFM API
The project targeted Java 21 with --enable-preview because it used the
Foreign Function & Memory API (java.lang.foreign), which was a preview
feature in Java 21. Upgrading the system JDK to 25 broke the build in
three ways:

- Gradle 8.10 cannot run on Java 25 (requires Gradle 9.1.0+).
- The --enable-preview flags are invalid since FFM was finalized in
  Java 22 and is no longer a preview feature.
- The FFM API changed when it left preview.

Changes:
- Bump the Gradle wrapper 8.10 -> 9.6.0.
- Drop all --enable-preview flags; bump source/target 21 -> 22 (the
  release where FFM became stable, keeping the jar runnable on JDK 22+).
- Rename FFM methods: allocateUtf8String -> allocateFrom and
  getUtf8String -> getString.
- Bind the new leading long base-offset coordinate that layout-derived
  VarHandles gained in JDK 22, via a small vh() helper, so all call
  sites stay unchanged. This fixes the WrongMethodTypeException that
  failed every integration test against a real device.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>